@@ -8,9 +8,11 @@ import java.util.List;
 
 public class ClusteredEventsFilter extends HardFilter {
     private final int maxEventsInRegion;
+    private final int maxEventsInHaplotype;
 
-    public ClusteredEventsFilter(final int maxEventsInRegion) {
+    public ClusteredEventsFilter(final int maxEventsInRegion, final int maxEventsInHaplotype) {
         this.maxEventsInRegion = maxEventsInRegion;
+        this.maxEventsInHaplotype = maxEventsInHaplotype;
     }
 
     @Override
@@ -18,8 +20,9 @@ public class ClusteredEventsFilter extends HardFilter {
 
     @Override
     public boolean isArtifact(final VariantContext vc, final Mutect2FilteringEngine filteringEngine) {
-        final Integer eventCount = vc.getAttributeAsInt(GATKVCFConstants.EVENT_COUNT_IN_HAPLOTYPE_KEY, -1);
-        return eventCount > maxEventsInRegion;
+        final List<Integer> haplotypeEventCounts = vc.getAttributeAsIntList(GATKVCFConstants.EVENT_COUNT_IN_HAPLOTYPE_KEY, 0);
+        final int regionEventCounts = vc.getAttributeAsInt(GATKVCFConstants.EVENT_COUNT_IN_REGION_KEY, 0);
+        return haplotypeEventCounts.stream().mapToInt(n -> n).max().getAsInt() > maxEventsInHaplotype || regionEventCounts > maxEventsInRegion;
     }
 
     @Override
@@ -28,5 +31,5 @@ public class ClusteredEventsFilter extends HardFilter {
     }
 
     @Override
-    protected List<String> requiredInfoAnnotations() { return Collections.singletonList(GATKVCFConstants.EVENT_COUNT_IN_HAPLOTYPE_KEY); }
+    protected List<String> requiredInfoAnnotations() { return List.of(GATKVCFConstants.EVENT_COUNT_IN_REGION_KEY, GATKVCFConstants.EVENT_COUNT_IN_HAPLOTYPE_KEY); }
 }
